--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-/Lab1/.idea
-/Lab1/dataset.csv
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -130,3 +127,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+/Lab1/dataset.csv
+/Lab1/.idea/
